--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Product Preview</title>
+    <title>Product Preview - MUI 5 | ReactJs | Testing</title>
+    <meta
+      name="description"
+      content="Product Preview Card design made with MUI 5, ReactJs and Typescript. This is a challenge made by Leonardo Rebouças."
+      key="desc"
+    />
+    <meta property="og:title" content="Product Preview" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://product-preview.baxhen.com/" />
+    <meta property="og:image" content="%PUBLIC_URL%/ogg_image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
