chore: add meta data

--- a/public/index.html
+++ b/public/index.html
@@ -41,12 +41,33 @@
       content="Product Preview Card design made with MUI 5, ReactJs and Typescript. This is a challenge made by Leonardo Rebouças."
       key="desc"
     />
+
+    <!-- OGG -->
     <meta property="og:title" content="Product Preview" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://product-preview.baxhen.com/" />
     <meta property="og:image" content="%PUBLIC_URL%/ogg_image.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
+
+    <!-- TWITTER  -->
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://product-preview.baxhen.com/"
+    />
+    <meta property="twitter:title" content="Product Preview" />
+    <meta
+      property="twitter:description"
+      content="Product Preview Card design made with MUI 5, ReactJs and Typescript. This is a challenge made by Leonardo Rebouças."
+    />
+    <meta
+      property="twitter:image"
+      itemprop="image"
+      content="%PUBLIC_URL%/ogg_image.png"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
